[gd_scene load_steps=11 format=2]

[ext_resource path="res://Light/Light_texture.webp" type="Texture" id=1]
[ext_resource path="res://Scripts/LightFlicker.gd" type="Script" id=2]
[ext_resource path="res://Environment/Interactive_objects/Checkpoint_Unlit.png" type="Texture" id=3]
[ext_resource path="res://Environment/Details/torch3_1.png" type="Texture" id=4]
[ext_resource path="res://Environment/Details/torch3_3.png" type="Texture" id=5]
[ext_resource path="res://Environment/Details/torch3_2.png" type="Texture" id=6]
[ext_resource path="res://Environment/Details/torch3_4.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Checkpoint.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "Lit",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Unlit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 15 )

[node name="Checkpoint" type="Area2D"]
collision_layer = 16
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Unlit"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 1 )
color = Color( 1, 0.760784, 0.423529, 1 )
range_layer_min = -100
script = ExtResource( 2 )

[node name="FinishTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Checkpoint_body_entered"]
[connection signal="timeout" from="FinishTimer" to="." method="_on_FinishTimer_timeout"]
